--- a/src/components/header/nav.css
+++ b/src/components/header/nav.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 ul {
   list-style: none;
@@ -18,15 +19,15 @@ li.nav-links {
   text-decoration: none;
   color: #2b475c;
   font-size: 15px;
-  font-weight: 700;
+  font-weight: 1000;
 }
 
 .nav-items-mid {
   padding-right: 30px;
   text-decoration: none;
   color: #2b475c;
-  font-size: 15px;
-  font-weight: 500;
+  font-size: 12px;
+  font-weight: 600px;
 }
 
 .nav-items-right {
@@ -37,9 +38,10 @@ li.nav-links {
 .top-nav {
   padding-top: 40px;
   height: 100px;
-
+  padding-left: 50px;
+  padding-right: 50px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   text-align: center;
   border-bottom: 3px solid #eaeaea;
 }
