--- a/src/components/Reviews/review.css
+++ b/src/components/Reviews/review.css
@@ -1,12 +1,15 @@
+.container-review {
+  padding-bottom: 20px;
+}
+
 .wrapper-review {
-  width: 50vw;
+  width: 60vw;
   margin: auto;
   display: flex;
   flex-direction: column;
-  border-bottom: 0.5px solid grey;
 }
 
-img {
+.user-img {
   height: 50px;
   width: 50px;
   border-radius: 50px;
@@ -33,7 +36,11 @@ p.review {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding-bottom: 5px;
+  padding-bottom: 7px;
+}
+
+p.comment {
+  line-height: 20px;
 }
 .rating-and-contents {
   display: flex;
@@ -41,11 +48,11 @@ p.review {
 }
 
 .ratings {
-  padding-bottom: 10px;
+  padding-bottom: 5px;
 }
 
 .date {
-  font-size: 10px;
+  font-size: 11px;
   color: #6e6862;
   padding-bottom: 10px;
 }
@@ -56,7 +63,7 @@ p.review {
 }
 .user-comment {
   padding-top: 5px;
-  padding-bottom: 10px;
+  padding-bottom: 15px;
 }
 
 .reaction-icons {
@@ -94,4 +101,8 @@ button.reply-btn:hover {
 span.user-name {
   font-weight: 600;
   text-transform: capitalize;
+}
+
+.image-span {
+  padding-top: 7px;
 }
