--- a/src/components/ProductDetails/story.css
+++ b/src/components/ProductDetails/story.css
@@ -1,11 +1,10 @@
-.story-main {
+.wrapper-story {
   display: flex;
+  width: 80vw;
+  margin: auto;
   flex-direction: column;
   padding-top: 40px;
   border-top: 1.5px solid #eaeaea;
-  margin-left: 180px;
-  margin-right: 163px;
-  margin-top: -20px;
   padding-bottom: 60px;
 }
 
@@ -65,16 +64,24 @@ button.production {
   background: white;
 }
 
-.story-icons-wrapper {
+.story-icons-container {
   display: flex;
+  flex-direction: column;
   justify-content: space-evenly;
   align-content: center;
   margin-left: 20px;
 }
+.story-icons-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 .icon-right {
   display: flex;
+  width: 70vw;
   justify-content: flex-end;
-  padding-top: 20px;
+  margin-top: 3%;
 }
 .story-desc {
   display: flex;
