--- a/src/components/Footer/footer-main.css
+++ b/src/components/Footer/footer-main.css
@@ -4,7 +4,9 @@
   display: flex;
   border-bottom: 1px solid #2d2e30;
 }
-
+li {
+  list-style: none;
+}
 .footer-wrapper {
   display: flex;
   flex-direction: column;
