--- a/src/components/Pricing/Pricing.css
+++ b/src/components/Pricing/Pricing.css
@@ -1,7 +1,8 @@
-.pricing-contents {
+.pricing-container {
   display: flex;
-  width: 100%;
-  height: 350px;
+
+  width: 100vw;
+  height: 55vh;
   background-image: url("../../assets/tomato.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -10,31 +11,25 @@
 }
 
 .pricing-wrapper {
-  width: 80vw;
+  width: 70vw;
   margin: auto;
   display: flex;
   justify-content: space-between;
   padding-top: 50px;
+  flex-wrap: wrap;
 }
 
 .pricing-texts {
   display: flex;
   flex-direction: column;
-  padding-top: 20px;
-  width: 50vw;
-  margin-right: 140px;
+  width: 35vw;
 }
 
 .icons-and-contents {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  margin-left: 140px;
-}
-
-.icon-set-one,
-.icon-set-two {
-  display: flex;
+  width: 15vw;
 }
 
 .icon-set-one,
@@ -43,11 +38,13 @@
   display: flex;
   border-bottom: 1px solid white;
   justify-content: center;
+  width: 21vw;
 }
 
 .pay-text-more {
   display: flex;
-  justify-content: center;
+  text-align: center;
+  width: 21vw;
 }
 
 .icon-one,
@@ -82,6 +79,8 @@ span.price {
 }
 
 .icon-text {
+  font-size: 12px;
+  font-weight: 400;
   display: flex;
   flex-direction: column;
 }
@@ -92,20 +91,21 @@ span.price-head {
   font-size: 25px;
   color: white;
   padding-bottom: 20px;
-  font-weight: 900;
+  font-weight: 700;
   padding-bottom: 20px;
 }
 
 p.price-desc-text {
   color: white;
-  font-size: 17px;
+  font-size: 16px;
   line-height: 27px;
-  font-weight: 300;
+  font-weight: 400;
 }
 
 span.we-pay {
   color: white;
-  font-size: 14px;
+  font-size: 12px;
+  font-weight: 400;
 }
 
 div.pay-text {
@@ -118,19 +118,4 @@ div.pay-text {
 div.pay-text-more {
   padding-top: 5px;
   display: flex;
-  width: 80%;
-  margin: auto;
 }
-
-/* .fw {
-  width: 100%;
-  height: 400px;
-  background: yellow;
-}
-
-.wrapper {
-  width: 80vw;
-  height: 300px;
-  margin: auto;
-  background: green;
-} */
