--- a/src/components/header/nav.css
+++ b/src/components/header/nav.css
@@ -1,3 +1,10 @@
+* {
+  font-family: "Roboto", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .container-nav-bar {
   display: flex;
   border-bottom: 3px solid #eaeaea;
@@ -6,7 +13,7 @@
 
 .wrapper-nav-bar {
   width: 90vw;
-  margin-left: 4%;
+  margin-left: 2%;
   margin-right: 5%;
   display: flex;
   justify-content: space-between;
